have gotten all parts of the search bar working, with the focus and fixed a bug where you weren't able to click on the clear icon, because it went invisible, so instead i changed to using opacity for that part, and it appears to be working perfectly

--- a/src/new/web/Orange-Music-2/css/topleft.css
+++ b/src/new/web/Orange-Music-2/css/topleft.css
@@ -45,7 +45,7 @@
 
 }
 
-.topleft-searchbarContainerL2:before {
+.topleft-searchbarContainerL2::before {
     content: "";
     position: absolute;
     top: 0;
@@ -57,14 +57,12 @@
     /* !importanté */
     border-radius: inherit;
     /* !importanté */
+}
 
-    /*
-    background: rgb(199, 0, 52);
-    background: linear-gradient(130deg, rgba(199, 0, 52, 1) 0%, rgba(4, 233, 182, 1) 32%, rgba(3, 0, 215, 1) 41%, rgba(197, 3, 65, 1) 72%, rgba(5, 5, 184, 1) 93%, rgba(0, 212, 255, 1) 100%);
-    
-    */
+.topleft-searchbarContainerL2.default::before {
+
     background-color: var(--searchbar-container-after-outline-colour);
-
+    background-image: none;
     /*
     background-color: hsla(131, 80%, 90%, 1);
     background-image:
@@ -72,6 +70,15 @@
         radial-gradient(at 67% 60%, hsla(208, 79%, 77%, 1) 0px, transparent 75%),
         radial-gradient(at 8% 18%, hsla(229, 79%, 68%, 1) 0px, transparent 75%);
 	*/
+
+}
+
+.topleft-searchbarContainerL2.updated::before {
+    background-color: hsla(131, 80%, 90%, 1);
+    background-image:
+        radial-gradient(at 17% 93%, hsla(188, 79%, 77%, 1) 0px, transparent 75%),
+        radial-gradient(at 67% 60%, hsla(208, 79%, 77%, 1) 0px, transparent 75%),
+        radial-gradient(at 8% 18%, hsla(229, 79%, 68%, 1) 0px, transparent 75%);
 
 }
 
@@ -172,12 +179,15 @@
 .topleft-clearIcon {
     position: absolute;
     height: 50%;
-    aspect-ratio: 1/1;
     top: 25%;
+    aspect-ratio: 1/1;
     right: 3.5%;
     filter: invert(100%);
+    outline: 0.2rem solid transparent;
 
-    visibility: hidden;
+    background-color: transparent;
+
+    opacity: 0%;
 }
 
 
